--- a/css/main.css
+++ b/css/main.css
@@ -133,6 +133,8 @@ main {
     width: 100%;
     height: 100%;
     padding-top: 3px;
+    overflow-x: hidden;
+    overflow-y: auto;
     
 }
 .main-item{
